fixed comparison resizing issue, finished readme, found data html will not show plot dropdown, ignoring and put in README

--- a/comparison.html
+++ b/comparison.html
@@ -51,7 +51,7 @@
     <!-- Create div container to adjust and style with css -->
     <div class="container-fluid">
       <!-- Create row to hold Comparison box - think parent box -->
-      <div class="row justify-content-center">
+      <div class="row justify-content-md-center">
         <div class="col-lg-10 col-sm-12">
           <div class="comparison">
             <h2 class="h2-compare">Comparison: Latitude vs X</h2>
@@ -60,8 +60,8 @@
               Click any plot to get an in-depth analysis.
             </p>
             <!-- Create child row for further styling and to hold two of four images -->
-            <div class="row justify-content-center">
-              <div class="col-lg-6 col-md-1 col-sm-3">
+            <div class="row">
+              <div class="col-lg-6 col-sm-12">
                 <!-- Created new header to make visual better -->
                 <h6>vs Max Temp</h6>
                 <!-- Create class specific for all images to allow for size to fill entire box -->
@@ -72,7 +72,7 @@
                   </a>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-1 col-sm-3">
+              <div class="col-lg-6 col-sm-12">
                 <h6>vs Cloudiness</h6>
                 <div class="compare-image">
                   <a href="cloud.html">
@@ -82,8 +82,8 @@
               </div>
             </div>
           <br>
-            <div class="row justify-content-center">
-              <div class="col-lg-6 col-md-1 col-sm-3">
+            <div class="row">
+              <div class="col-lg-6 col-sm-12">
                 <h6>vs Wind Speed</h6>
                 <div class="compare-image">
                   <a href="wind.html">
@@ -91,7 +91,7 @@
                   </a>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-1 col-sm-3">
+              <div class="col-lg-6 col-sm-12">
                 <h6>vs Humidity</h6>
                 <div class="compare-image">
                   <a href="humidity.html">
