--- a/data.html
+++ b/data.html
@@ -39,9 +39,7 @@
           <ul class="navbar-nav">
             <!-- navbar dropdown-->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Plots
-              </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Plots</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="maxtemp.html">Max Temperature</a>
                 <a class="dropdown-item" href="humidity.html">Humidity</a>
