still can't figure out the Plot dropdown issue

--- a/data.html
+++ b/data.html
@@ -23,10 +23,11 @@
       border-color:#404040 transparent;visibility:hidden}
     .tg-sort-header:hover:after{visibility:visible}
     .tg-sort-asc:after,.tg-sort-asc:hover:after,.tg-sort-desc:after{visibility:visible;opacity:.4}
-    .tg-sort-desc:after{border-bottom:none;border-width:5px 5px 0}</style>
+    .tg-sort-desc:after{border-bottom:none;border-width:5px 5px 0}
+    </style>
   </head>
   <body>
-<!-- Navbar template getbootstrap.com -->
+    <!-- Navbar template getbootstrap.com -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <!-- navbar brand Title tab-->
@@ -39,7 +40,9 @@
           <ul class="navbar-nav">
             <!-- navbar dropdown-->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Plots</a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Plots
+              </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="maxtemp.html">Max Temperature</a>
                 <a class="dropdown-item" href="humidity.html">Humidity</a>
